--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 body {
   margin: 0;
   min-width: 250px;
+font-family: 'Montserrat', sans-serif;
 }
 
 /* Include the padding and border in an element's total width and height */
@@ -116,3 +117,5 @@ input {
 .addBtn:hover {
   background-color: #bbb;
 }
+
+
