--- a/css/style.css
+++ b/css/style.css
@@ -94,25 +94,28 @@ ul li.checked::before {
 
 /* Style the input */
 input {
-  border: none;
-  width: 75%;
-  padding: 10px;
-  float: left;
-  font-size: 16px;
+    border: none;
+    width: 75%;
+    padding: 10px;
+    float: left;
+    border-radius: 10px 10px;
+    font-size: 16px;
 }
 
 /* Style the "Add" button */
 .addBtn {
-  padding: 10px;
-  width: 25%;
-  background: #d9d9d9;
-  color: #555;
-  float: left;
-  text-align: center;
-  font-size: 16px;
-  cursor: pointer;
-  transition: 0.3s;
-  border-radius: 50px 20px;
+    padding: 5px;
+    width: 24%;
+    background: #d9d9d9;
+    color: #555;
+    float: left;
+    font-weight: 600;
+    text-align: center;
+    font-size: 25px;
+    cursor: pointer;
+    transition: 0.3s;
+    border-radius: 10px 10px;
+    margin-left: 2px;
 }
 
 .addBtn:hover {
